fix content dimensions on mobile browsers
was experiencing issues with iphone safari not rendering profile pic correctly & iphone chrome having content take up entire width of screen

--- a/css/setup.css
+++ b/css/setup.css
@@ -37,15 +37,21 @@ a:visited {
   flex-direction: column; /* Stack children vertically */
   justify-content: center; /* Centers content vertically */
   min-height: 100vh; /* Makes sure it takes full viewport height */
+  width: 90%;
   max-width: 450px;
+  margin: 0 auto;
 }
 
 /** Profile picture container **/
 .profile-pic {
   display: flex;
   justify-content: left;
-  height: 200px;
+}
+.profile-pic img {
   border-radius: 24px;
+  max-width: 200px;
+  height: auto;
+  display: block;
 }
 
 /** Expandable list items CSS **/
